<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerLayoutT1">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrolview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/theme"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#152142"
        tools:context=".teams.TeamActivity">


    <ImageView
        android:id="@+id/imageViewTeamIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="#D7C52D"
        android:padding="3dp"
        android:src="@drawable/teamicon0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageView>


    <TextView
        android:id="@+id/addMemberName"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageViewTeamIcon"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/teamRank"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="80dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="80dp"
        android:text="@string/rank"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/imageViewTeamIcon"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <ImageButton
        android:id="@+id/chatButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/ic_baseline_chat_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </ImageButton>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/membersList"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="#44969FAA"
        android:paddingVertical="5dp"
        android:paddingTop="5dp"
        app:circularflow_radiusInDP="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewTeamIcon">


    </androidx.recyclerview.widget.RecyclerView>

    <Button
        android:id="@+id/AddMemberActivityButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/ic_baseline_add_circle_24"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/membersList">

    </Button>

        <Button
            android:id="@+id/button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/oval_green"
            android:text="@string/ranking"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddMemberActivityButton">

        </Button>

        <Button
            android:id="@+id/challengesActivityButton"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            android:background="@drawable/oval_green"
            android:text="@string/challenges"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AddMemberActivityButton">

        </Button>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.03009576" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/teamHistoryList"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button">

        </androidx.recyclerview.widget.RecyclerView>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/customSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.AppCompatSpinner>

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_viewT1"
        android:layout_width="180dp"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"
        android:theme="@style/NavigationView"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemTextColor="@color/browser_actions_bg_grey"
        app:itemIconSize="80dp"
        app:itemIconPadding="3dp"
        app:itemBackground="@color/navigationColor"

        />
</androidx.drawerlayout.widget.DrawerLayout>


